--- a/src/style.less
+++ b/src/style.less
@@ -71,7 +71,7 @@ noscript {
 .root-container,
 .global-error-container,
 #unsupported {
-    position: static;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
